<resources>
    <string name="app_name">linear_layout_ex1</string>
    <string name="text_btn_1">1</string>
    <string name="text_btn_2">2</string>
    <string name="text_btn_3">3</string>
    <string name="text_btn_4">4</string>
    <string name="text_btn_5">5</string>
    <string name="text_btn_6">6</string>
    <string name="text_btn_7">7</string>
    <string name="text_btn_8">8</string>
    <string name="text_btn_9">9</string>
    <string name="text_btn_left">*</string>
    <string name="text_btn_right">#</string>
    <string name="text_result_0978123xxx">0978123xxx</string>
    <string name="text_btn_0">0</string>
</resources>