<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/master_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="2"
        >
        <TextView
            android:id="@+id/text_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="48sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:weightSum="5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights"
            >
            <android.widget.Button
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="44dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="#F73802"
                android:backgroundTintMode="screen"
                android:text="@string/text_btn_1"
                android:textColor="@color/design_default_color_background"
                android:textSize="36sp"
                tools:ignore="NestedWeights,TextContrastCheck" />
            <android.widget.Button
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="#F73802"
                android:backgroundTintMode="screen"
                android:text="@string/text_btn_2"
                android:textColor="@color/design_default_color_background"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />

            <android.widget.Button
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="44dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="#F73802"
                android:backgroundTintMode="screen"
                android:text="@string/text_btn_3"
                android:textColor="@color/design_default_color_background"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="44dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="#F73802"
                android:backgroundTintMode="screen"
                android:text="@string/text_btn_4"
                android:textColor="@color/design_default_color_background"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />

            <android.widget.Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="#F73802"
                android:backgroundTintMode="screen"
                android:text="@string/text_btn_5"
                android:textColor="@color/design_default_color_background"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />

            <android.widget.Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="44dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="#F73802"
                android:backgroundTintMode="screen"
                android:text="@string/text_btn_6"
                android:textColor="@color/design_default_color_background"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="44dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="#F73802"
                android:backgroundTintMode="screen"
                android:text="@string/text_btn_7"
                android:textColor="@color/design_default_color_background"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />

            <android.widget.Button
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="#F73802"
                android:backgroundTintMode="screen"
                android:text="@string/text_btn_8"
                android:textColor="@color/design_default_color_background"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />

            <android.widget.Button
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="44dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="#F73802"
                android:backgroundTintMode="screen"
                android:text="@string/text_btn_9"
                android:textColor="@color/design_default_color_background"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">
            <android.widget.Button
                android:id="@+id/btn_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="44dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="#F73802"
                android:backgroundTintMode="screen"
                android:text="@string/text_btn_left"
                android:textColor="@color/design_default_color_background"
                android:textSize="36sp"
                />
            <android.widget.Button
                android:id="@+id/btn_0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="#F73802"
                android:backgroundTintMode="screen"
                android:text="@string/text_btn_0"
                android:textColor="@color/design_default_color_background"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />

            <android.widget.Button
                android:id="@+id/btn_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="44dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:backgroundTint="#F73802"
                android:backgroundTintMode="add"
                android:text="@string/text_btn_right"
                android:textColor="@color/design_default_color_background"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="44dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:backgroundTint="#E1DEDE"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="36sp"
                android:visibility="invisible" />

            <android.widget.Button
                android:id="@+id/btn_call"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/ic_round_call_16"
                android:backgroundTint="#42CC47"
                android:backgroundTintMode="multiply"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="36sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <android.widget.Button
                android:id="@+id/btn_del"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="44dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:forceHasOverlappingRendering="true"
                android:background="@drawable/ic_clear_4"
                android:backgroundTint="#F73802"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="36sp"
                android:visibility="invisible"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>